@@ -1,5 +1,7 @@
 March 2018 6.3
   - Server profile: added option if referential integrity overlay is active to sip cleanup actions
+  - Bugs:
+   -> Login page not working when no server profile exists (44)
   - LAM Pro:
    -> Support custom structural object classes with new custom type
    -> Support dynamic lists
